--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ html {
 .container {
     width: 100%;
     height: 100%;
-    background-image: url('immagini/sfondo.png');
+    background-image: url('sfondo.png');
     background-size: cover;
     background-position: center;
     position: absolute;
