--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ html {
     margin: 0;
     padding: 0;
     height: 100%;
+    background-image: url('sfondo.png');
+    background-size: cover;
+    background-position: center;
 }
 
 .container {
