--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@ html {
 .container {
     width: 100%;
     height: 100%;
-    background-image: url('immagini/sfondo.png');
     background-image: url('sfondo.png');
     background-size: cover;
     background-position: center;
@@ -208,6 +207,17 @@ li a:hover {
     height: 100%;
     background-color: rgba(79, 79, 79, 0.5);
     backdrop-filter: blur(2px);
+}
+
+.container {
+    width: 100%;
+    height: 100%;
+    background-image: url('sfondo.png');
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 #center {
