--- a/style.css
+++ b/style.css
@@ -209,6 +209,17 @@ li a:hover {
     backdrop-filter: blur(2px);
 }
 
+body,
+html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    background-image: url('sfondo.png');
+    background-size: cover;
+    background-position: center;
+
+}
+
 .container {
     width: 100%;
     height: 100%;
