--- a/style.css
+++ b/style.css
@@ -18,18 +18,11 @@
     font-size: 1vw;
 }
 
-
-
 body,
 html {
     margin: 0;
     padding: 0;
     height: 100%;
-
-    background-image: url('sfondo.png');
-    background-size: cover;
-    background-position: center;
-
 }
 
 .container {
@@ -42,7 +35,6 @@ html {
     top: 0;
     left: 0;
 }
-
 
 ul {
     list-style: none;
@@ -156,8 +148,9 @@ li a:hover {
     .blurred-background {
         width: 100%; /* Modifica la larghezza del blur background al 100% */
         height: 25%;
+        background-color: black;
     }
-    
+
     #center {
         width: 100%; /* Modifica la larghezza del contenitore centrale al 80% */
         left: 10%; /* Posiziona il contenitore centrale al 10% della larghezza dello schermo */
@@ -167,32 +160,28 @@ li a:hover {
         display: none; /* Nascondi il menu principale */
     }
 
-
-
     #logo {
         width: 20%;
         left: 5%;
         top: 35%;
     }
     #logo-grande {
-        display: none;
         width: 70%; /* Riduci la dimensione dei loghi */
         left: 15%; /* Centra i loghi */
     }
-    
-     #logo-yt {
+
+    #logo-yt {
         display: none;
     }
-    
-     #logo-insta {
+
+    #logo-insta {
         display: none;
     }
-    
-    /* Aggiungi altre regole CSS per rendere il testo più piccolo */
+
     h1 {
         font-size: 2rem;
     }
-    
+
     p {
         font-size: 1rem;
         margin-left: 10px;
