--- a/style1.css
+++ b/style1.css
@@ -89,6 +89,16 @@ li a:hover {
     left: 25%;
 }
 
+.hamburger-menu {
+    display: none;
+    font-size: 30px;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 1000;
+}
+
 
 
 @media screen and (max-width: 768px) {
@@ -97,6 +107,10 @@ li a:hover {
         width: 100%; /* Modifica la larghezza del blur background al 100% */
         height: 25%;
         background-color: black;
+    }
+
+    .hamburger-menu {
+        display: block;
     }
 
     #center {
