--- a/style1.css
+++ b/style1.css
@@ -90,12 +90,13 @@ li a:hover {
 }
 
 .hamburger-menu {
+    color: white;
     display: none;
     font-size: 30px;
     cursor: pointer;
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 30px;
+    right: 30px;
     z-index: 1000;
 }
 
