--- a/style1.css
+++ b/style1.css
@@ -90,14 +90,14 @@ li a:hover {
 }
 
 .hamburger-menu {
-    color: white;
     display: none;
     font-size: 30px;
     cursor: pointer;
-    position: absolute;
+    position: fixed;
     top: 30px;
     right: 30px;
     z-index: 1000;
+    color: white; /* Colore dell'icona bianco */
 }
 
 
