--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     height: 100%;
     background-color: rgba(79, 79, 79, 0.5);
     backdrop-filter: blur(2px);
+    z-index: 1; /* Assicurati che il background sia dietro al menù */
 }
 
 #center {
@@ -16,6 +17,7 @@
     height: 80%;
     display: block;
     font-size: 1vw;
+    z-index: 0; /* Assicurati che il centro sia dietro al menù */
 }
 
 body,
@@ -66,6 +68,7 @@ li a:hover {
     top: 5%;
     width: 35%;
     left: 32.5%;
+    z-index: 2; /* Assicurati che il logo sia sopra il background */
 }
 
 #logo-yt {
@@ -73,6 +76,7 @@ li a:hover {
     top: 90%;
     left: 50%;
     width: 10%;
+    z-index: 2; /* Assicurati che il logo sia sopra il background */
 }
 
 #logo-insta {
@@ -80,6 +84,7 @@ li a:hover {
     top: 89%;
     left: 40%;
     width: 10%;
+    z-index: 2; /* Assicurati che il logo sia sopra il background */
 }
 
 #logo-grande {
@@ -87,6 +92,7 @@ li a:hover {
     top: 40%;
     width: 35%;
     left: 25%;
+    z-index: 2; /* Assicurati che il logo sia sopra il background */
 }
 
 .menu-icon {
@@ -94,13 +100,14 @@ li a:hover {
     cursor: pointer;
     display: none; /* Nascondi per schermi grandi */
     position: absolute;
-    top: 20px; /* Distanza dal top per migliorare la visibilità */
+    top: 5%; /* Stessa altezza del logo piccolo */
     right: 20px; /* Distanza dal right per migliorare la visibilità */
     color: white;
     width: 50px; /* Larghezza del contenitore */
     height: 50px; /* Altezza del contenitore */
     line-height: 50px; /* Allinea verticalmente il contenuto */
     text-align: center; /* Allinea orizzontalmente il contenuto */
+    z-index: 3; /* Assicurati che l'icona sia sopra il menù */
 }
 
 .navbar {
@@ -109,11 +116,12 @@ li a:hover {
     width: 100%;
     height: 80%;
     position: absolute; /* Sovrappone il menù */
-    top: 120px; /* Posiziona il menù sotto l'header */
+    top: 60px; /* Posiziona il menù sotto l'header */
     left: 0;
     flex-direction: row; /* Disponi i link in orizzontale */
     justify-content: center; /* Centra i link orizzontalmente */
     background-color: rgba(0, 0, 0, 0.5);
+    z-index: 4; /* Assicurati che il menù sia sopra gli altri elementi */
 }
 
 .navbar ul {
