--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ li a:hover {
 @media screen and (max-width: 768px) {
     .menu-icon {
         display: block; /* Mostra per schermi piccoli */
+        top: 35%; /* Allinea con il logo piccolo */
     }
 
     .navbar.show {
@@ -155,6 +156,7 @@ li a:hover {
         align-items: center; /* Centra i link verticalmente */
         font-size: 3.0vw;
         font-family: 'Anton', sans-serif;
+        top: 60px; /* Modifica per evitare sovrapposizione */
     }
 
     .blurred-background {
@@ -175,7 +177,7 @@ li a:hover {
     #logo {
         width: 20%;
         left: 5%;
-        top: 35%;
+        top: 35%; /* Stessa altezza dell'icona del menù */
     }
 
     #logo-grande {
