--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ li a:hover {
         align-items: center; /* Centra i link verticalmente */
         font-size: 3.0vw;
         font-family: 'Anton', sans-serif;
-        top: 60px; /* Modifica per evitare sovrapposizione */
+        top: 100px; /* Modifica per evitare sovrapposizione */
     }
 
     .blurred-background {
@@ -168,6 +168,7 @@ li a:hover {
     #center {
         width: 100%; /* Modifica la larghezza del contenitore centrale al 100% */
         left: 0; /* Posiziona il contenitore centrale al 0% della larghezza dello schermo */
+        top: 30%;
     }
 
     .start-menu {
