--- a/style.css
+++ b/style.css
@@ -168,8 +168,8 @@ li a:hover {
     #center {
         width: 80%; /* Modifica la larghezza del contenitore centrale al 100% */
         left: 0; /* Posiziona il contenitore centrale al 0% della larghezza dello schermo */
-        top: 70%; /* Posiziona il contenitore centrale sotto il menù */
-        height: 30%; /* Riduci l'altezza del contenitore per adattarsi allo schermo */ 
+        top: 30%; /* Posiziona il contenitore centrale sotto il menù */
+        height: auto; /* Riduci l'altezza del contenitore per adattarsi allo schermo */ 
     }
 
     .start-menu {
