--- a/style.css
+++ b/style.css
@@ -143,6 +143,10 @@ li a:hover {
 }
 
 @media screen and (max-width: 768px) {
+
+    .container{
+        overflow: auto;
+    }
     .menu-icon {
         display: block; /* Mostra per schermi piccoli */
         top: 35%; /* Allinea con il logo piccolo */
