--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     display: block;
     font-size: 1vw;
     z-index: 0; /* Assicurati che il centro sia dietro al menù */
-    overflow: auto;
+    
 }
 
 body,
@@ -145,7 +145,7 @@ li a:hover {
 @media screen and (max-width: 768px) {
 
     .container{
-        overflow: auto;
+        overflow-y: auto;
     }
     .menu-icon {
         display: block; /* Mostra per schermi piccoli */
